--- a/env.properties
+++ b/env.properties
@@ -1,6 +1,6 @@
-postgresql.password = Buccari15!
+postgresql.password = 
 
 #cloudinary
-cloud_name=drrew5zef
-api_key=921131976753328
-api_secret=tgPX22MtxNKbEq_me8jJUODZOKY
+cloud_name=
+api_key=
+api_secret=
